# shinject

./: README.md
shinject/: CMakeLists.txt
shinject/include/: elf.h  macho.h  pe.h  shinject.h  util.h
shinject/src/: elf.c  macho.c  main.c  pe.c  util.c
